[gd_scene load_steps=3 format=2]

[ext_resource path="res://scripts/Tetrominos/O.gd" type="Script" id=1]
[ext_resource path="res://scenes/Mino.tscn" type="PackedScene" id=2]

[node name="O" type="KinematicBody2D"]
position = Vector2( 32, 32 )
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="Minos" type="Node2D" parent="."]
editor/display_folded = true
__meta__ = {
"_edit_group_": true
}

[node name="Mino0" parent="Minos" instance=ExtResource( 2 )]
position = Vector2( -16, -16 )

[node name="Mino1" parent="Minos" instance=ExtResource( 2 )]
position = Vector2( 16, -16 )

[node name="Mino2" parent="Minos" instance=ExtResource( 2 )]
position = Vector2( -16, 16 )

[node name="Mino3" parent="Minos" instance=ExtResource( 2 )]

[node name="DropTimer" type="Timer" parent="."]

[node name="ControlTimer" type="Timer" parent="."]
wait_time = 0.1

[connection signal="timeout" from="DropTimer" to="." method="_on_DropTimer_timeout"]
[connection signal="timeout" from="ControlTimer" to="." method="_on_ControlTimer_timeout"]
